--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,6 +3,7 @@
 @import "utilities/mixins";
 
 // Base
+@import "base/bootstrap/index"; // 50kb limit?
 @import "base/lazyload";
 @import "base/typography";
 @import "base/global";
