--- a/scss/base/bootstrap/_collapse.scss
+++ b/scss/base/bootstrap/_collapse.scss
@@ -80,7 +80,7 @@ tbody.collapse.show {
 .dropdown-item {
   display: block;
   width: 100%;
-  padding: 3px 1.5rem;
+  padding: .5em 1.25em;
   clear: both;
   font-weight: normal;
   color: #292b2c;
