--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -8,11 +8,10 @@
   white-space: nowrap;
   vertical-align: middle;
   user-select: none;
-  border: .2rem solid transparent;
+  border: .125rem solid transparent;
   padding: .5em 1em;
   font-size: 1em;
   border-radius: .25em;
-  text-transform: uppercase;
   transition: all .2s ease-in-out;
   // custom
   @include Varela;
@@ -72,6 +71,38 @@
     background-color: $max-blue-dark;
     border-color: $max-blue-dark;
     color: #fff;
+  }
+}
+
+@mixin button-secondary {
+  color: $text-color;
+  background-color: $max-white;
+  border-color: #DDD;
+
+  &:hover {
+    color: #292b2c;
+    background-color: #e6e6e6;
+    border-color: #adadad;
+  }
+
+  &:focus,
+  &.focus {
+    box-shadow: 0 0 0 2px rgba(204, 204, 204, 0.5);
+  }
+
+  &.disabled,
+  &:disabled {
+    background-color: #fff;
+    border-color: #ccc;
+  }
+
+  &:active,
+  &.active,
+  .show > &.dropdown-toggle {
+    color: #292b2c;
+    background-color: #e6e6e6;
+    background-image: none;
+    border-color: #adadad;
   }
 }
 
@@ -149,36 +180,6 @@ fieldset[disabled] a.btn {
   pointer-events: none;
 }
 
-.btn-secondary {
-  color: $text-color;
-  background-color: $max-white;
-  border-color: #DDD;
-}
-
-.btn-secondary:hover {
-  color: #292b2c;
-  background-color: #e6e6e6;
-  border-color: #adadad;
-}
-
-.btn-secondary:focus, .btn-secondary.focus {
-  -webkit-box-shadow: 0 0 0 2px rgba(204, 204, 204, 0.5);
-          box-shadow: 0 0 0 2px rgba(204, 204, 204, 0.5);
-}
-
-.btn-secondary.disabled, .btn-secondary:disabled {
-  background-color: #fff;
-  border-color: #ccc;
-}
-
-.btn-secondary:active, .btn-secondary.active,
-.show > .btn-secondary.dropdown-toggle {
-  color: #292b2c;
-  background-color: #e6e6e6;
-  background-image: none;
-  border-color: #adadad;
-}
-
 .btn-sm, .btn-group-sm > .btn {
   padding: .25em 0.5em;
   font-size: .875em;
@@ -201,6 +202,10 @@ input[type="button"].btn-block {
 
 .btn-primary {
   @include button-primary;
+}
+
+.btn-secondary {
+  @include button-secondary;
 }
 
 .btn-round {
