--- a/scss/components/navigation/_navigation.scss
+++ b/scss/components/navigation/_navigation.scss
@@ -260,6 +260,10 @@ $box-size: 40px;
 }
 
 .navbar-nav {
+  .avatar {
+    max-height: 2.5rem;
+    max-width: 2.5rem
+  }
   &.admin-nav {
     @include flex-d-row;
     // padding-top: $calc-25;
@@ -267,10 +271,6 @@ $box-size: 40px;
     // padding-bottom: $calc-75;    
     // padding-left: $calc-1;
     padding: .875em 1em;
-    .avatar {
-      max-height: 2.5rem;
-      max-width: 2.5rem
-    }
     & > li {
       flex-basis: 7em;
       @include mr-1;
@@ -278,14 +278,95 @@ $box-size: 40px;
     .btn-group {
       flex-basis: auto;
       @include text-md;
-      > .btn {
-        border: none;
-        padding-right: .125rem;
-        padding-left: .125rem;
-        a:hover,
-        a:focus {
-          color: currentColor;
-          opacity: .8;
+    }
+    > .btn {
+      border-width: .125rem;
+      padding-right: .125rem;
+      padding-left: .125rem;
+      a:hover,
+      a:focus {
+        background-color: $max-grey-EEE;
+        color: currentColor;
+        @include pl-2;
+      }
+    }
+
+    .dropdown-menu {
+      border-radius: .4rem;
+      font-size: .875rem;
+      position: absolute;
+      top: auto;
+      left: 3.5rem;
+      bottom: 0;
+      min-width: 10em;
+      @include pt-1;
+      @include pb-1;
+      -moz-osx-font-greyscale: auto;
+      -webkit-font-smoothing: auto;
+      .menu-header {
+        color: $max-grey-999;        
+        &:hover,
+        &:focus {
+          background-color: transparent;
+          strong {
+            //color: $link;
+          }
+        }
+        strong {
+          color: $max-grey;
+        }
+      }
+      .profile-menu-items {
+        .dropdown-item {
+          color: $max-grey-555;
+          font-size: 1.1em;
+          transition: .4s ease;
+          -moz-osx-font-smoothing: auto;
+          -webkit-font-smoothing: auto;
+          .icon {
+            color: #777;
+            @include text-md;
+            transition: .4s ease;
+          }
+          &:hover,
+          &:focus {
+            background-color: #EEE;
+            @include pl-2;
+            .icon {
+              color: $link;
+              //font-size: 2em;
+              //margin-left: -.125rem;
+            }
+          }
+        }
+      }
+      .avatar {
+        max-height: 3rem;
+        max-width: 3rem;
+      }
+      &:before {
+        content: "";
+        display: inline-block;
+        position: absolute;
+        border: 8px solid transparent;
+        border-right-color: #FFF;
+        bottom: 1em;        
+        right: auto;
+        left: -16px;
+      }
+      @media (min-width: $break-540) {
+        top: 3rem;
+        bottom: auto;
+        right: 0; 
+        left: auto;
+        min-width: 20em;
+        &:before {
+          border-right-color: transparent;
+          border-bottom-color: #FFF;
+          top: -16px;
+          right: 1em;
+          bottom: auto;
+          left: auto;
         }
       }
     }
@@ -320,39 +401,6 @@ $box-size: 40px;
       .user-menu-toggle {
         display: block;
         @include mr-sm;
-      }
-    }
-    .dropdown-menu {
-      border-radius: .4rem;
-      font-size: .875rem;
-      position: absolute;
-      top: auto;
-      left: 3.5rem;
-      bottom: 0;
-      min-width: 12em;
-      &:before {
-        content: "";
-        display: inline-block;
-        position: absolute;
-        border: 8px solid transparent;
-        border-right-color: #FFF;
-        bottom: 1em;        
-        right: auto;
-        left: -16px;
-      }
-      @media (min-width: $break-540) {            top: 3rem;
-        bottom: auto;
-        right: 0; 
-        left: auto;
-        min-width: 12em;
-        &:before {
-          border-right-color: transparent;
-          border-bottom-color: #FFF;
-          top: -16px;
-          right: 1em;
-          bottom: auto;
-          left: auto;
-        }
       }
     }
     @media (min-width: $break-540) and (max-width: $break-992 - .01em) {
