--- a/scss/components/navigation/_navigation.scss
+++ b/scss/components/navigation/_navigation.scss
@@ -324,7 +324,8 @@ $box-size: 40px;
           -moz-osx-font-smoothing: auto;
           -webkit-font-smoothing: auto;
           .icon {
-            color: #777;
+            color: $max-grey;
+            @include mr-sm;
             @include text-md;
             transition: .4s ease;
           }
