--- a/scss/elements/_images.scss
+++ b/scss/elements/_images.scss
@@ -17,3 +17,18 @@
     width: 7rem;
   }
 }
+
+.dash-sample {
+  position: relative;
+  img {
+    filter: drop-shadow(0 0 1.5rem rgba(black,.35));
+  }
+  figcaption {
+    @include Varela;
+    @include text-md;
+    position: absolute;
+    @include p-0;
+    top: 3em;
+    left: 3em;
+  }
+}
