--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -22,6 +22,7 @@
 @import "components/masthead";
 @import "components/cards";
 @import "components/banners";
+@import "components/feature-list";
 @import "components/blockquote";
 @import "components/modals";
 
