--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -7,21 +7,6 @@
   p, nav {
     @include text-sm;
   }
-  .logo {
-    @include flex;
-    flex-grow: 1;
-    flex-basis: 15em;
-    max-width: 15em;
-    @include mb-2;
-    @include pr-1;
-    img {
-      max-height: 4em;
-      max-width: 15em;
-    }
-  }
-  .search {
-    @include mb-2;
-  }
   @supports (grid-gap: 0) {
     grid-row: 4 / 4;
   }
@@ -41,13 +26,52 @@
   }
 }
 
+.footer-logo {
+  @include flex;
+  @include flex-wrap;
+  @include ai-center;
+  @include jc-between;
+  @include mb-4;
+  .site-logo {
+    @include flex;
+    flex-grow: 1;
+    flex-basis: 15em;
+    max-width: 15em;
+    max-height: 3em;
+    @include mr-a;
+    @include ml-a;
+    @include mb-1;
+    > * {
+      flex-grow: 1;
+    }
+  }
+  .search {
+    @include flex-grow-1;
+    @include mw-15em;
+    @include mr-a;
+    @include mb-1;
+    @include ml-a;    
+  }
+  
+  @media (min-width: 33em) {
+    .site-logo {
+      @include mr-ml-0;
+      @include pr-1;
+    }
+    .search {
+      @include mr-ml-0;
+    }
+  }
+}
+
 .footer-nav {
   @include flex;
   @include flex-wrap;
   padding-top: $calc-2;
 
   nav {
-    @include mb-2;
+    @include mb-3;
+    flex-basis: 20em;
     &:not(:last-child) {
       padding-right: calc(1vw + 2em);
     }
@@ -63,6 +87,11 @@
     list-style-type: none;
   }
 
+  h3 {
+    font-size: 1.5em;
+    @include mb-1-pt5;
+  }
+
   a:hover {
     //text-decoration: none;
     @supports (text-decoration-skip: ink) {
@@ -73,16 +102,14 @@
   @media (min-width: 42em) {
     nav {
       //flex-basis: 17%;
-      @include mb-4;
+      //@include mb-4;
       &:not(:last-child) {
         padding-right: calc(1vw + 4em);
       }
     }
   }
-  @media (min-width: 55em) {
-    flex-wrap: nowrap;
-  }
   @media (min-width: 65em) {
+    flex-wrap: nowrap;
     nav {
       &:not(:last-child) {
         padding-right: calc(1vw + 4em);
@@ -92,9 +119,17 @@
 }
 
 .footer-contact {
+  @include flex;
+  @include flex-wrap;
+  @include ai-end;
+  @include jc-between;
   @include text-sm;
+  .contact-info,
+  .footer-copyright {
+    @include pt-2;
+  }
   .contact-info {
-    @include mb-2;
+    @include pr-1;
   }
   @media (min-width: 39em) {
     > * {
