navigation update, form styles, footer nav fix, a11y form fix

--- a/partials/main-menu.html
+++ b/partials/main-menu.html
@@ -11,8 +11,13 @@
                 <a class="nav-link" href="about.html">About<!--<span class="sr-only">(current)</span>--></a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="services.html" id="services-dropdown" data-toggle="dropdown" aria-haspopup="true"
-                  aria-expanded="false">Services</a>
+                <a class="nav-link dropdown-toggle" href="#0" id="products-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
+                <div class="dropdown-menu" aria-labelledby="products-dropdown">
+                  <a class="dropdown-item" href="products/wmsb/">Watch My School Bus</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="services.html" id="services-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
                 <div class="dropdown-menu" aria-labelledby="services-dropdown">
                   <a class="dropdown-item" href="subscription-services.html">Subscription Services</a>
                   <a class="dropdown-item" href="integration.html">Integration</a>
