--- a/scss/theme/_ca-theme-colors.scss
+++ b/scss/theme/_ca-theme-colors.scss
@@ -34,8 +34,12 @@
   @include theme-blue;
 }
 
-.theme-teal {
-  @include theme-teal;
+.theme-blue-rich {
+  @include theme-blue-rich;
+}
+
+.theme-blue-dark {
+  @include theme-blue-dark;
 }
 
 .theme-green {
@@ -52,4 +56,12 @@
 
 .theme-orange {
   @include theme-orange;
+}
+
+.theme-rust {
+  @include theme-rust;
+}
+
+.theme-teal {
+  @include theme-teal;
 }
