--- a/scss/modules/_site-header.scss
+++ b/scss/modules/_site-header.scss
@@ -15,6 +15,8 @@
   //will-change: transform;
   position: fixed;
   transition: opacity .3s ease;
+  @include w-100;
+  z-index: 1030;
 }
 .headroom--pinned {
   //transform: translateY(0%);
