--- a/scss/products/wmsb/wmsb-styles.scss
+++ b/scss/products/wmsb/wmsb-styles.scss
@@ -11,8 +11,9 @@
 // @import "../../utilities/modifiers/mod-flexbox";
 
 // Theme
+@import "wmsb-theme-colors";
 @import "wmsb-typography";
 @import "wmsb-navigation";
 @import "wmsb-layout";
 @import "wmsb-backgrounds";
-@import "wmsb-theme-colors";
+@import "wmsb-media";
