--- a/scss/components/_feature-list.scss
+++ b/scss/components/_feature-list.scss
@@ -4,10 +4,32 @@
     @include text-lg;
   }
   .feature-text {
+    color: $ca-black;
+    font-size: 1em;
     @include mb-1-pt5;
-    @include text-sm;
+  }
+  .feature-text {
+    border-top: .1rem solid #ddd;
+    @include pt-sm;
+  }
+  // .icon {
+  //   display: block;
+  // }
+  // h3 {
+  //   border-bottom: .2rem solid #ddd;
+  //   display: inline-block;
+  //   @include pb-tiny;
+  // }
+  a {
+    border-top: none;
+    border-right: none;
+    border-bottom: .175rem solid currentColor;
+    border-left: none;
+    border-radius: 0;
+    @include pb-tiny;
   }
 }
+
 
 .feature-items {
   @include flex-layout;
