--- a/scss/products/wmsb/_wmsb-theme-colors.scss
+++ b/scss/products/wmsb/_wmsb-theme-colors.scss
@@ -4,11 +4,15 @@ $wmsb-yellow: #FFD400;
 
 $wmsb-red: #FF0000;
 
+$wmsb-rust: #d14c1f;
+
 $wmsb-dark-red: #C93816;
 
 $wmsb-blue: #1C5BEA;
 
 $wmsb-green: #2EA051;
+
+$wmsb-teal: #39909A;
 
 $wmsb-orange: #EF9E4C;
 
@@ -19,7 +23,15 @@ $wmsb-dark-brown: #4D4C45;
 .c-warning {
   color: $wmsb-red;
  }
- 
+
+ .c-red {
+  color: $wmsb-dark-red;
+}
+
+.c-rust {
+  color: $wmsb-rust;
+}
+
  .c-blue {
    color: $wmsb-blue;
  }
@@ -27,6 +39,10 @@ $wmsb-dark-brown: #4D4C45;
  .c-green {
    color: $wmsb-green;
  }
+
+ .c-teal {
+  color: $wmsb-teal;
+}
  
  .c-orange {
    color: $wmsb-orange;
