--- a/scss/products/wmsb/_wmsb-media.scss
+++ b/scss/products/wmsb/_wmsb-media.scss
@@ -1,6 +1,17 @@
 .dash-sample {
-  @media (min-width: 20em) and (max-width: 40em) {
-    padding-left: 4em;
+  padding-bottom: 53%;
+  img {
+    top: auto;
+    bottom: 0;
+  }
+  @media (min-width: 20em) {
+    img {
+      height: 95%;
+      width: 95%;
+      left: auto;
+      right: 0;
+      padding-left: 4em;
+    }
   }
 
   figcaption {
@@ -16,5 +27,10 @@
   @media  (min-width: 40em) {
     padding-right: 4em;
     padding-left: 4em;
+    img {
+      padding-left: 0;
+      right: auto;
+      left: 2.5%;
+    }
   }
 }
