--- a/scss/elements/_media-item.scss
+++ b/scss/elements/_media-item.scss
@@ -1,21 +1,37 @@
 .media-wrap {
-  position: relative;
+  @include fade-in;
   line-height: 0;
   height: 0; // padding-bottom: 70% !important; // 4:3
+  margin: 0;
+  position: relative;
   padding-bottom: 56.25%; // 16:9
   width: 100%;
-  > * {
+  z-index: 1;
+  img,
+  iframe {
     display: inline-block;
+    opacity: 0;
     position: absolute;
     margin: 0;
-    padding-top: 0;
     height: 100%;
     width: 100%;
     top: 0;
     left: 0;
+    transition: .4s ease;
   }
-  iframe {
-    
+  &.img {
+    @include slug-img-bg;
+  }
+  &.video {
+    @include slug-video-bg;
+    figcaption {
+      position: relative;
+      bottom: -2.2em;
+      text-align: center;
+    }
+  }
+  &.pen {
+    @include slug-code-bg;
   }
 }
 
