--- a/scss/products/wmsb/_wmsb-backgrounds.scss
+++ b/scss/products/wmsb/_wmsb-backgrounds.scss
@@ -19,6 +19,23 @@
 // yellow bg
 .bg-bus-yelllow {
   background-image: url(../images/bg/bg-bus-yellow-01.jpg);
+  @media (min-width: 40em) {
+    margin-top: -7em;
+    .card-row .card-block {
+      padding-top: 16%;
+    }
+  }
+}
+
+// blue bg
+.bg-bus-blue {
+  background-image: url(../images/bg/bg-bus-blue-01.jpg);
+  @media (min-width: 40em) {
+    margin-top: -7em;
+    .card-row .card-block {
+      padding-top: 16%;
+    }
+  }
 }
 
 
