--- a/scss/utilities/mixins/_backgrounds.scss
+++ b/scss/utilities/mixins/_backgrounds.scss
@@ -85,3 +85,18 @@
 @mixin bg-light {
   background-color: $ca-white;
 }
+
+@mixin slug-img-bg {
+  background: url("../images/ui/icon-photo.svg") center no-repeat transparent;
+  background-size: 20%;
+}
+
+@mixin slug-video-bg {
+  background: url("../images/ui/icon-video.svg") center no-repeat transparent;
+  background-size: 20%;
+}
+
+@mixin slug-code-bg {
+  background: url("../images/ui/icon-codepen-grey.svg") center no-repeat transparent;
+  background-size: 20%;
+}
