--- a/layouts/partials/2_components/banners/contact-banner.html
+++ b/layouts/partials/2_components/banners/contact-banner.html
@@ -4,9 +4,9 @@
   <!-- Copyrights / Contact Nav -->
   <div class="flex flex-wrap ai-center jc-between">
     
-    {{ partial "components/navigation/contact-nav.html" . }}
+    {{ partial "2_components/navigation/contact-nav.html" . }}
 
-    {{ partial "elements/copyrights.html" . }}
+    {{ partial "1_elements/copyrights.html" . }}
 
   </div>
 </section>
