--- a/layouts/partials/2_components/banners/contact-banner.html
+++ b/layouts/partials/2_components/banners/contact-banner.html
@@ -6,7 +6,7 @@
     
     {{ partial "2_components/navigation/contact-nav.html" . }}
 
-    {{ partial "1_elements/copyrights.html" . }}
+    {{ partial "2_components/copyrights.html" . }}
 
   </div>
 </section>
