--- a/layouts/partials/2_components/navigation/main-menu.html
+++ b/layouts/partials/2_components/navigation/main-menu.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-inverse navbar-toggleable-md main-menu" role="navigation">
   <div class="container">
-    {{ partial "1_elements/site-title.html" . }}
+    {{ partial "2_components/navbar-brand.html" . }}
     {{ partial "1_elements/main-menu-toggle.html" . }}
     <div class="collapse navbar-collapse" id="main-menu" role="navigation">
       <ul class="navbar-nav ml-a">
