--- a/static/scss/elements/_buttons.scss
+++ b/static/scss/elements/_buttons.scss
@@ -7,17 +7,12 @@
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  user-select: none;
   border: 1px solid transparent;
-  padding: 0.5rem 1rem;
+  padding: .5rem 1rem;
   font-size: 1rem;
-  border-radius: 0.25rem;
-  -webkit-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
+  border-radius: .25rem;
+  transition: all .2s ease-in-out;
   // custom
   @include MontserratLight;
   letter-spacing: .05em;
@@ -117,8 +112,7 @@
 
 .btn:focus, .btn.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.25);
-          box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.25);
+  box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.25);
 }
 
 .btn.disabled, .btn:disabled {
