--- a/public/scss/modules/_footer.scss
+++ b/public/scss/modules/_footer.scss
@@ -70,8 +70,9 @@
   padding-top: $calc-2;
 
   nav {
-    @include mb-3;
+    @include flex-grow-1;
     flex-basis: 20em;
+    @include mb-3;    
     &:not(:last-child) {
       padding-right: calc(1vw + 2em);
     }
